# hbrs_courses

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
15w_air/: README.md
15w_air/assignment03/: CMakeLists.txt  README.txt
15w_air/assignment03/include/: agent.hpp  environment.hpp
15w_air/assignment03/src/: environment.cpp  main.cpp
15w_air/assignment03/tex/: AIR_MINHNGUYEN_201015.bib  AIR_MINHNGUYEN_201015.tex
15w_air/assignment04/: CMakeLists.txt
15w_air/assignment05/: CMakeLists.txt  README.txt
15w_air/assignment06/: CMakeLists.txt  README.txt
15w_air/assignment07/: CMakeLists.txt
15w_air/assignment08/: CMakeLists.txt
15w_air/assignment09/: README.txt
15w_air/assignment10/: CMakeLists.txt
15w_amr/: .gitignore  README.md
15w_amr/amr_braitenberg/: BEHAVIORS.md  setup.py
15w_amr/amr_bugs/: setup.py
15w_amr/amr_exploration/: package.xml  setup.py
15w_amr/amr_exploration/include/: color.h  frontier.h
15w_amr/amr_exploration/nodes/: explorer.py  frontier_publisher.cpp
15w_amr/amr_exploration/src/: frontier.cpp
15w_amr/amr_msgs/: CMakeLists.txt
15w_amr/amr_navigation/: setup.py
15w_amr/evaluation/: amr_team4_evaluation_20151113.tex
15w_amr/grades/: 20151113.md  20151120.md  20151211.md  20151223.md  20160108.md  20160115.md
15w_amr/time-reports/: 20151223
15w_ast/: README.md
15w_fc/java_exercises/: .gitignore
16s_la/: convert_csv_to_hdf5.py  extract_stores.py  la_nguyen_keras_test.ipynb  mnguy12s_la_lab_20160503.ipynb  rossman_visualization.ipynb
16s_la/data/: data_15_stores.hd5  train_small.csv
16s_la/docs/: la_mnguyen_hw_presentation.tex  la_nguyen_hw_report.tex
16s_la/models/: model_storedata_15stores_1layer_dropout.yaml  model_storedata_15stores_1layer_dropout_weights.hd5  model_storedata_15stores_mse_1layer_dropout.yaml  model_storedata_15stores_mse_1layer_dropout_weights.hd5
16s_rp/: .gitignore  README.md  RP_NGUYENMINH_ExamReview.ipynb  RP_NGUYENMINH_Homework_20160407.ipynb  RP_NGUYENMINH_Homework_20160414.ipynb  RP_NGUYENMINH_Homework_20160421.ipynb  RP_NGUYENMINH_Homework_20160428.ipynb  RP_NGUYENMINH_Homework_20160526.ipynb  rp_mnguyen_20160616_trialexam.ipynb
16s_rp/16s_robot_perception/: setup.py
16s_rp/robot_perception/: README.md  setup.py
16w_amrc/assignments/: 20161006_nguyenminh_chapter1.tex  20161027_nguyenminh_chapter3.tex  20161130_nguyenminh_exercise9.tex
16w_amrc/images/: barber_ex3-11.graphml  (+2 more)
16w_nn/: NN_MinhNguyen_20161010_exercises.ipynb
16w_see/: .gitignore  SEE_NguyenMinh_data_plots.ipynb
17s_ecta/: README.md
18w_colloquium/: RnD.bib
RnD/: RnD.bib
RnD2/: RnD.bib
amr_braitenberg/: CMakeLists.txt  README.md
amr_braitenberg/cfg/: BraitenbergVehicle.cfg
amr_braitenberg/include/: braitenberg_vehicle.h
amr_braitenberg/launch/: braitenberg.launch
amr_braitenberg/nodes/: braitenberg_vehicle.cpp  braitenberg_vehicle.py  differential_drive_emulator.cpp  differential_drive_emulator.py
amr_braitenberg/src/: braitenberg_vehicle.cpp
amr_braitenberg/src/amr_braitenberg/: braitenberg_vehicle.py
amr_bugs/: CMakeLists.txt
amr_exploration/: CMakeLists.txt
amr_localization/: CMakeLists.txt  package.xml  setup.py
amr_mapping/: CMakeLists.txt  setup.py
amr_navigation/: CMakeLists.txt
amr_stage/: CMakeLists.txt
assignment03/: README.txt
assignment04/: README.txt  result_map1.txt  result_map2.txt  result_map3.txt
assignment05/: CMakeLists.txt
assignment06/: CMakeLists.txt  README.txt
assignment06/include/: greedy_search.hpp  search.hpp  state.hpp
assignment06/src/: greedy_search.cpp  main.cpp  search.cpp  state.cpp
assignment06/tex/: AIR_MINHNGUYEN_BACHHA_EVGENIYA_101115.tex  AIR_MINHNGUYEN_BACHHA_OVCHINNIKOVAEVGENIYA_101115.tex  AIR_MINHNGUYEN_BACHHA_OVCHINNIKOVAEVGENIYA_Questions_101115.tex
assignment07/: CMakeLists.txt  README.txt
assignment07/include/: City.h  city.hpp  salesman.hpp
assignment07/src/: Salesman.cpp  city.cpp  main.cpp  salesman.cpp
assignment07/tex/: AIR_MINHNGUYEN_BACHHA_OVCHINNIKOVAEVGENIYA_171115.tex  AIR_MINHNGUYEN_BACHHA_OVCHINNIKOVAEVGENIYA_Questions_171115.tex
assignment08/: README.txt
assignment09/: CMakeLists.txt
assignment09/include/: city.hpp  dfs_backtrack.hpp
assignment09/src/: city.cpp  dfs_backtrack.cpp  main.cpp
assignment09/tex/: AIR_MINHNGUYEN_BACHHA_OVCHINNIKOVAEVGENIYA_011215.tex  AIR_MINHNGUYEN_BACHHA_OVCHINNIKOVAEVGENIYA_Questions_011215.tex
assignment10/: CMakeLists.txt  README.txt
assignment10/include/: game.hpp  state.hpp
assignment10/src/: game.cpp  main.cpp  state.cpp
assignment10/tex/: AIR_MINHNGUYEN_BACHHA_OVCHINNIKOVAEVGENIYA_081215.tex
face_detection_verilook/: CMakeLists.txt  package.xml
face_detection_verilook/src/: face_detection_verilook.cpp
face_recognition_verilook/: package.xml
grades/: 20151120.md  20151204.md
images/: h-brs-logo.xcf
latex/: template_assignment.tex  template_assignment_pretty.tex  template_presentation.tex
src/: Exercise1.java  Exercise2.java  Series2.java  Series2Ex2.java  Series2Ex3.java
thesis/: thesis.bib
time-reports/: 20151218
verilook_ros/: CMakeLists.txt  nodelet_face_detection_verilook.xml  package.xml  verilook_ros.cbp
verilook_ros/face_detection_verilook/: CMakeLists.txt  package.xml
verilook_ros/face_detection_verilook/include/face_detection_verilook/: face_detection_verilook_node.h
verilook_ros/face_detection_verilook/ros/include/face_detection_verilook/: face_detection_verilook_node.h
verilook_ros/face_detection_verilook/ros/src/: face_detection_verilook_node.cpp  face_detection_verilook_nodelet.cpp
verilook_ros/face_detection_verilook/src/: face_detection_verilook_node.cpp  face_detection_verilook_nodelet.cpp
verilook_ros/face_recognition_verilook/: CMakeLists.txt  package.xml
verilook_ros/ros/include/: TutorialUtils.h  face_detection_verilook_node.h  verilook_ros.h  verilook_wrapper.h
verilook_ros/ros/launch/: face_detection_node.launch  face_detection_nodelet.launch
verilook_ros/ros/src/: face_detection_verilook_node.cpp  face_detection_verilook_nodelet.cpp  verilook_wrapper.cpp
(+316 files in other folders)
