<package format="2">
    <name>face_detection_verilook</name>
    <version>1.0.0</version>
    <description>Implementation of the Verilook tool chain in ROS</description>
    <maintainer email="minh.nguyen@smail.inf.h-brs.de">Minh Nguyen</maintainer>
    <author>Minh Nguyen</author>
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>cmake_modules</depend>

    <build_depend>nodelet</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>nodelet</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>

</package>
