<?xml version="1.0"?>
<package format="2">
    <name>face_recognition_verilook</name>
    <version>0.0.0</version>
    <description>The face_recognition_verilook package</description>

    <maintainer email="minh.nguyen@smail.inf.h-brs.de">Minh Nguyen</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>


    <!-- <url type="website">http://wiki.ros.org/face_recognition_verilook</url> -->


    <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


    <buildtool_depend>catkin</buildtool_depend>

    <depend>nodelet</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
